--- a/caseStudy2.Rmd
+++ b/caseStudy2.Rmd
@@ -55,18 +55,6 @@ sort(prop.table(table(dat2$Event.Clearance.Code)), decreasing = TRUE)[1:5]
 sort(table(dat2$Event.Clearance.Code), decreasing = TRUE)[1:5]
 # write.csv(code,"seattle_code.csv")
 ```
-Load weather data for further use
-```{r}
-weather <- read.csv("Road_Weather_Information_Stations.csv", header=TRUE, as.is = TRUE, stringsAsFactors = FALSE)
-
-detach(package:plyr)
-weather <- weather %>%
-  group_by(DateTime) %>%
-  summarise(avgtem = mean(AirTemperature)) %>% as.data.frame()
-
-```
-
-
 Clearning: count() is a better version of table()
 1.Event.Clearance.Code is related to the Event.Clearance.Desscription
 2. rare data cleaning
@@ -206,6 +194,19 @@ ds_full$mm <- as.factor(ds_full$mm)
 ds_full$Event.Clearance.Code <- as.factor(ds_full$Event.Clearance.Code)
 ds_full$Zone.Beat <- as.factor(ds_full$Zone.Beat)
 ds_full$hh <- as.factor(ds_full$hh)
+```
+Load weather data for further use
+```{r}
+weather <- read.csv("Road_Weather_Information_Stations.csv", header=TRUE, as.is = TRUE, stringsAsFactors = FALSE)
+
+detach(package:plyr)
+weather <- weather %>%
+  group_by(DateTime) %>%
+  summarise(avgtem = mean(AirTemperature)) %>% as.data.frame()
+
+```
+Join the table
+```{r}
 ds_full <- ds_full %>%
   left_join(weather, by = c("Event.Clearance.Date" = "DateTime"))
 ds_full <- ds_full[which(!is.na(ds_full$avgtem)),]
